# ai-content-compliance-rl

./: .gitignore  Dockerfile  Dockerfile.space  EXPLAINER.md  README.md  client.py  dev.bat  dev.sh  env_openenv.py  environment.py  gradio_app.py  hf_server.py  inference.py  inference_results.json  main.py  models.py  openenv.yaml  pyproject.toml  q-dev-chat-2026-04-09.md  q-dev-chat-2026-04-10.md  requirements.txt  start.sh  test_env.py  test_out.txt  ui.py  validate_endpoints.py  validate_ws.py
ai-content-compliance-openenv/: .dockerignore  Dockerfile  README.md  docker-compose.yml  hf_server.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh  ui.py
ai-content-compliance-openenv/agents/: __init__.py  q_agent.py
ai-content-compliance-openenv/app/: env.py  models.py  reward.py  (+1 more)
app/: __init__.py  env.py  models.py  reward.py
backend/: main.py
data/: content_samples.json  ground_truth.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
graders/: __init__.py  edit_evaluator.py  grader.py  graders.py  openai_evaluator.py  test_grader.py  violation_detector.py
hf_setup/: .env.example  Dockerfile  README.md  app.py  env.py  models.py  openenv.yaml  requirements.txt
llm/: evaluator.py  prompt_templates.py
openenv/: __init__.py  environment.py  models.py
server/: app.py
tasks/: __init__.py  task_3_hard_complex.py  tasks.py
ui-dashboard/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
utils/: __init__.py  config.py  content_generator.py  data_loader.py
(+46 files in other folders)
